--- a/lang/fa.json
+++ b/lang/fa.json
@@ -1,5 +1,8 @@
 {
     "register": "ثبت نام",
+    "product": "محصول",
+    "coupon": "کوپن",
+    "voucher": "ووچر",
     "The :attribute must contain at least one number.": "The :attribute must contain at least one number.",
     "The :attribute must contain at least one symbol.": "The :attribute must contain at least one symbol.",
     "The :attribute must contain at least one uppercase and one lowercase letter.": "The :attribute must contain at least one uppercase and one lowercase letter.",
