--- a/lang/fa.json
+++ b/lang/fa.json
@@ -3,6 +3,9 @@
     "product": "محصول",
     "coupon": "کوپن",
     "voucher": "ووچر",
+    "manual-by-store": "توسط کسب کار",
+    "lottery": "قرعه کشی",
+    "award": "جایزه",
     "The :attribute must contain at least one number.": "The :attribute must contain at least one number.",
     "The :attribute must contain at least one symbol.": "The :attribute must contain at least one symbol.",
     "The :attribute must contain at least one uppercase and one lowercase letter.": "The :attribute must contain at least one uppercase and one lowercase letter.",
